<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 Scott Weeden-Moody
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this project except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <string name="content_desc_create_dialog">Create Dialog</string>

    <string name="activity_dialogs">Dialogs</string>
    <string name="attributes">Attributes</string>
    <string name="cancelable">Cancelable</string>
    <string name="cancelable_on_touch_outside">Cancelable On Touch Outside</string>
    <string name="check_cancelable">\u2713 Cancelable</string>
    <string name="check_cancelable_on_touch_outside">\u2713 Cancelable on Touch Outside</string>
    <string name="check_linkable">\u2713 Linkable</string>
    <string name="create_dialog">Create Dialog</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="dialogs_get_started">Create a dialog to get started</string>
    <string name="edit">Edit</string>
    <string name="icon_not_supported">Icons Are Not Yet Supported</string>
    <string name="linkable">Linkable</string>
    <string name="message">Message</string>
    <string name="negative_button">Negative Button</string>
    <string name="neutral_button">Neutral Button</string>
    <string name="positive_button">Positive Button</string>
    <string name="save_changes">Save changes</string>
    <string name="title">Title</string>

    <string name="content_desc_save_changes">Save changes</string>

</resources>
