<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025 Scott Weeden-Moody
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this project except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/default_side_margin"
            android:paddingStart="@dimen/default_side_margin"
            android:paddingTop="@dimen/default_top_margin"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/icon_not_supported" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/message" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/positiveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/positive_button" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/neutralButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/neutral_button" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/negativeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/negative_button" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cancelable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cancelable" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cancelableOnTouchOutside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelable_on_touch_outside" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/linkable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkable" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_desc_save_changes"
        android:text="@string/save_changes"
        app:icon="@drawable/ic_save_12" />

</FrameLayout>